<com.termux.app.terminal.TermuxActivityRootView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_termux_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/activity_termux_root_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <FrameLayout
                android:id="@+id/main_surface_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/terminal_surface_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/terminal_surface_translucent_background"
                    android:orientation="vertical">

                    <com.termux.view.TerminalView
                        android:id="@+id/terminal_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:autofillHints="password"
                        android:defaultFocusHighlightEnabled="false"
                        android:focusableInTouchMode="true"
                        android:importantForAutofill="no"
                        android:scrollbarThumbVertical="@drawable/terminal_scroll_shape"
                        android:scrollbars="vertical"
                        tools:ignore="UnusedAttribute" />

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/terminal_toolbar_view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="37.5dp"
                        android:background="@color/black"
                        android:visibility="gone" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/left_drawer"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="?attr/termuxActivityDrawerBackground"
                android:choiceMode="singleChoice"
                android:clickable="true"
                android:focusable="true"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:descendantFocusability="afterDescendants"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/left_drawer_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/settings_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:contentDescription="@string/action_open_settings"
                        android:src="@drawable/ic_settings"
                        app:tint="?attr/termuxActivityDrawerImageTint" />

                    <ImageButton
                        android:id="@+id/recover_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:contentDescription="@string/action_recover_storage"
                        android:src="@drawable/recover"
                        app:tint="?attr/termuxActivityDrawerImageTint" />

                    <ImageButton
                        android:id="@+id/backup_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:contentDescription="@string/action_backup_storage"
                        android:src="@drawable/backup"
                        app:tint="?attr/termuxActivityDrawerImageTint" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/left_drawer_sections_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/toggle_session_list_button"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/session_list_expanded"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="8sp" />

                    <ListView
                        android:id="@+id/terminal_sessions_list"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:layout_gravity="top"
                        android:choiceMode="singleChoice"
                        android:longClickable="true" />

                    <TextView
                        android:id="@+id/toggle_toolbox_button"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/toolbox_expanded"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="8sp" />

                    <LinearLayout
                        android:id="@+id/toolbox_container"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:background="@drawable/toolbox_inline_background"
                        android:orientation="vertical" />

                    <TextView
                        android:id="@+id/toggle_container_manager_button"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/container_manager_expanded"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="8sp" />

                    <LinearLayout
                        android:id="@+id/container_manager_container"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_margin="6dp"
                        android:background="@drawable/toolbox_inline_background"
                        android:orientation="vertical" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/left_drawer_actions"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/toggle_keyboard_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/action_toggle_soft_keyboard" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/new_session_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/action_new_session" />
                </LinearLayout>
            </LinearLayout>

            <include
                layout="@layout/window_preference"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:layout_gravity="end" />

        </androidx.drawerlayout.widget.DrawerLayout>

    </RelativeLayout>

    <View
        android:id="@+id/activity_termux_bottom_space_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent" />

</com.termux.app.terminal.TermuxActivityRootView>
